# SP_Task2

./: CMakeLists.txt  Makefile
src/: calculator.cpp  calculator.h  main.cpp
